cluster/external/nas01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas01
spec:
  type: ExternalName
  externalName: nas01.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - port: 80
