cluster/external/nas01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas01
spec:
  rules:
    - host: nas01.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nas01
                port:
                  number: 80
  tls:
    - hosts:
        - nas01.${SECRET_PUBLIC_DOMAIN}
